--- a/FennecFox/app.config
+++ b/FennecFox/app.config
@@ -22,6 +22,12 @@
             <setting name="threadUrl" serializeAs="String">
                 <value />
             </setting>
+            <setting name="Moderator" serializeAs="String">
+                <value>YourNameHere</value>
+            </setting>
+            <setting name="EndOfDay" serializeAs="String">
+                <value>09/29/2011 19:00:00</value>
+            </setting>
         </FennecFox.Properties.Settings>
     </userSettings>
 </configuration>
