--- a/FennecFox/Properties/Settings.settings
+++ b/FennecFox/Properties/Settings.settings
@@ -29,5 +29,8 @@
     <Setting Name="EndOfDay" Type="System.DateTime" Scope="User">
       <Value Profile="(Default)">09/29/2011 19:00:00</Value>
     </Setting>
+    <Setting Name="DeadPlayers" Type="System.Collections.Specialized.StringCollection" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
