--- a/FennecFox/app.config
+++ b/FennecFox/app.config
@@ -8,10 +8,10 @@
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/></startup><userSettings>
         <FennecFox.Properties.Settings>
             <setting name="username" serializeAs="String">
-                <value>myusername</value>
+                <value>oreos</value>
             </setting>
             <setting name="password" serializeAs="String">
-                <value>mypassword</value>
+                <value>wwdraft</value>
             </setting>
             <setting name="postsPerPage" serializeAs="String">
                 <value>100</value>
