--- a/FennecFox/Properties/Settings.settings
+++ b/FennecFox/Properties/Settings.settings
@@ -1,36 +1,24 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="FennecFox.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="POG.FennecFox.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="username" Type="System.String" Scope="User">
-      <Value Profile="(Default)">myusername</Value>
-    </Setting>
-    <Setting Name="password" Type="System.String" Scope="User">
-      <Value Profile="(Default)">mypassword</Value>
-    </Setting>
-    <Setting Name="postsPerPage" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)">100</Value>
-    </Setting>
     <Setting Name="firstPost" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">1</Value>
     </Setting>
     <Setting Name="threadUrl" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="Mappings" Type="System.Collections.Specialized.StringDictionary" Scope="User">
-      <Value Profile="(Default)" />
-    </Setting>
     <Setting Name="Players" Type="System.Collections.Specialized.StringCollection" Scope="User">
       <Value Profile="(Default)" />
-    </Setting>
-    <Setting Name="Moderator" Type="System.String" Scope="User">
-      <Value Profile="(Default)">YourNameHere</Value>
     </Setting>
     <Setting Name="EndOfDay" Type="System.DateTime" Scope="User">
       <Value Profile="(Default)">09/29/2011 19:00:00</Value>
     </Setting>
-    <Setting Name="DeadPlayers" Type="System.Collections.Specialized.StringCollection" Scope="User">
-      <Value Profile="(Default)" />
+    <Setting Name="username" Type="System.String" Scope="User">
+      <Value Profile="(Default)">oreos</Value>
+    </Setting>
+    <Setting Name="password" Type="System.String" Scope="User">
+      <Value Profile="(Default)">wwdraft</Value>
     </Setting>
   </Settings>
 </SettingsFile>
