--- a/FennecFox/app.config
+++ b/FennecFox/app.config
@@ -2,32 +2,26 @@
 <configuration>
 <configSections>
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-        <section name="FennecFox.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        <section name="POG.FennecFox.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
 </configSections>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/></startup><userSettings>
-        <FennecFox.Properties.Settings>
-            <setting name="username" serializeAs="String">
-                <value>oreos</value>
-            </setting>
-            <setting name="password" serializeAs="String">
-                <value>wwdraft</value>
-            </setting>
-            <setting name="postsPerPage" serializeAs="String">
-                <value>100</value>
-            </setting>
+        <POG.FennecFox.Properties.Settings>
             <setting name="firstPost" serializeAs="String">
                 <value>1</value>
             </setting>
             <setting name="threadUrl" serializeAs="String">
                 <value />
             </setting>
-            <setting name="Moderator" serializeAs="String">
-                <value>YourNameHere</value>
-            </setting>
             <setting name="EndOfDay" serializeAs="String">
                 <value>09/29/2011 19:00:00</value>
             </setting>
-        </FennecFox.Properties.Settings>
+            <setting name="username" serializeAs="String">
+                <value>oreos</value>
+            </setting>
+            <setting name="password" serializeAs="String">
+                <value>wwdraft</value>
+            </setting>
+        </POG.FennecFox.Properties.Settings>
     </userSettings>
 </configuration>
