--- a/checkmywwstats/checkmywwstats.csproj
+++ b/checkmywwstats/checkmywwstats.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{DF0D7868-C4C0-4388-BF11-138E1FC9BF87}</ProjectGuid>
+    <ProjectGuid>{C1C1B5FD-7C05-467A-BE22-F6670E013D05}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>vbulletin</RootNamespace>
-    <AssemblyName>vbulletin</AssemblyName>
+    <RootNamespace>POG.Database</RootNamespace>
+    <AssemblyName>checkmywwstats</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -33,16 +33,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="HtmlAgilityPack">
-      <HintPath>..\FennecFox\HtmlAgilityPack.dll</HintPath>
+    <Reference Include="Apache.NMS, Version=1.5.0.2194, Culture=neutral, PublicKeyToken=82756feee3957618, processorArchitecture=MSIL">
+      <HintPath>Apache.NMS.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.4.5.7\lib\net40\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Apache.NMS.Stomp">
+      <HintPath>.\Apache.NMS.Stomp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -50,26 +48,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConnectionSettings.cs" />
-    <Compile Include="Vbulletin.cs" />
-    <Compile Include="HtmlHelper.cs" />
-    <Compile Include="PrivateMessage.cs" />
-    <Compile Include="Post.cs" />
+    <Compile Include="CheckMyStats.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SecurityUtils.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\checkmywwstats\checkmywwstats.csproj">
-      <Project>{C1C1B5FD-7C05-467A-BE22-F6670E013D05}</Project>
-      <Name>checkmywwstats</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\pogutils\pogutils.csproj">
-      <Project>{D1549E8C-BAB5-4E3B-AE03-DC9895752D31}</Project>
-      <Name>pogutils</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="nmsprovider-activemq.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
