--- a/FennecFox/app.config
+++ b/FennecFox/app.config
@@ -11,7 +11,7 @@
                 <value>1</value>
             </setting>
             <setting name="threadUrl" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="EndOfDay" serializeAs="String">
                 <value>09/29/2011 19:00:00</value>
@@ -20,7 +20,10 @@
                 <value>oreos</value>
             </setting>
             <setting name="password" serializeAs="String">
-                <value>wwdraft</value>
+                <value />
+            </setting>
+            <setting name="updateSettings" serializeAs="String">
+                <value>True</value>
             </setting>
         </POG.FennecFox.Properties.Settings>
     </userSettings>
