--- a/FennecFox/app.config
+++ b/FennecFox/app.config
@@ -17,7 +17,7 @@
                 <value>09/29/2011 19:00:00</value>
             </setting>
             <setting name="username" serializeAs="String">
-                <value>oreos</value>
+                <value />
             </setting>
             <setting name="password" serializeAs="String">
                 <value />
