--- a/FennecFox/FennecFox.csproj
+++ b/FennecFox/FennecFox.csproj
@@ -86,6 +86,12 @@
     <Compile Include="FennecFox.Designer.cs">
       <DependentUpon>FennecFox.cs</DependentUpon>
     </Compile>
+    <Compile Include="FoxParent.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FoxParent.Designer.cs">
+      <DependentUpon>FoxParent.cs</DependentUpon>
+    </Compile>
     <Compile Include="PlayerList.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -104,6 +110,10 @@
     </Compile>
     <EmbeddedResource Include="FennecFox.resx">
       <DependentUpon>FennecFox.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FoxParent.resx">
+      <DependentUpon>FoxParent.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="PlayerList.resx">
       <DependentUpon>PlayerList.cs</DependentUpon>
