Thread monitor starting to work.

--- a/checkmywwstats/nmsprovider-test.config
+++ b/checkmywwstats/nmsprovider-test.config
@@ -16,5 +16,16 @@
 * limitations under the License.
 -->
 <configuration>
-    <defaultURI value="stomp:tcp://${activemqhost}:61613"/>
+	<defaultURI value="activemq:tcp://${activemqhost}:61616?connection.AsyncClose=false">
+		<userName value="system"/>
+		<passWord value="manager"/>
+	</defaultURI>
+
+	<openWireURI value="activemq:tcp://${activemqhost}:61616?connection.AsyncClose=false">
+		<factoryParams>
+			<param type="string" value="OpenWireTestClient"/>
+		</factoryParams>
+		<userName value="guest"/>
+		<passWord value="guest"/>
+	</openWireURI>
 </configuration>
