--- a/ThreadMonitor/ThreadMonitor.csproj
+++ b/ThreadMonitor/ThreadMonitor.csproj
@@ -80,6 +80,10 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\checkmywwstats\checkmywwstats.csproj">
+      <Project>{C1C1B5FD-7C05-467A-BE22-F6670E013D05}</Project>
+      <Name>checkmywwstats</Name>
+    </ProjectReference>
     <ProjectReference Include="..\forum\Forum.csproj">
       <Project>{DF0D7868-C4C0-4388-BF11-138E1FC9BF87}</Project>
       <Name>Forum</Name>
