--- a/checkmywwstats/checkmywwstats.csproj
+++ b/checkmywwstats/checkmywwstats.csproj
@@ -56,10 +56,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Apache.NMS, Version=1.5.0.2194, Culture=neutral, PublicKeyToken=82756feee3957618, processorArchitecture=MSIL">
-      <HintPath>Apache.NMS.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>.\Apache.NMS.dll</HintPath>
     </Reference>
-    <Reference Include="Apache.NMS.Stomp">
-      <HintPath>.\Apache.NMS.Stomp.dll</HintPath>
+    <Reference Include="Apache.NMS.ActiveMQ">
+      <HintPath>.\Apache.NMS.ActiveMQ.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -71,12 +72,20 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CheckMyStats.cs" />
+    <Compile Include="LobbyReadEventArgs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ThreadReadEventArgs.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="nmsprovider-activemq.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\pogutils\pogutils.csproj">
+      <Project>{D1549E8C-BAB5-4E3B-AE03-DC9895752D31}</Project>
+      <Name>pogutils</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
