Time Zones working with ThreadMonitor.

--- a/ThreadMonitor/ThreadMonitor.csproj
+++ b/ThreadMonitor/ThreadMonitor.csproj
@@ -84,6 +84,10 @@
       <Project>{C1C1B5FD-7C05-467A-BE22-F6670E013D05}</Project>
       <Name>checkmywwstats</Name>
     </ProjectReference>
+    <ProjectReference Include="..\ForumTypes\ForumTypes.csproj">
+      <Project>{3A512A72-44FC-458A-A6FB-36147D6C0CF6}</Project>
+      <Name>ForumTypes</Name>
+    </ProjectReference>
     <ProjectReference Include="..\forum\Forum.csproj">
       <Project>{DF0D7868-C4C0-4388-BF11-138E1FC9BF87}</Project>
       <Name>Forum</Name>
