--- a/werewolf/werewolf.csproj
+++ b/werewolf/werewolf.csproj
@@ -57,6 +57,10 @@
     <Compile Include="Voter.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ForumTypes\ForumTypes.csproj">
+      <Project>{3A512A72-44FC-458A-A6FB-36147D6C0CF6}</Project>
+      <Name>ForumTypes</Name>
+    </ProjectReference>
     <ProjectReference Include="..\forum\Forum.csproj">
       <Project>{DF0D7868-C4C0-4388-BF11-138E1FC9BF87}</Project>
       <Name>Forum</Name>
