Changed Console.Writelines to Traces. Send lobby and post info as json. Use NMSCorrelationID for both so the requester can identify their responses. Edits are their own class. Send thread locked info. Queue requests to read threads -- one thread at a time.

--- a/forum/Forum.csproj
+++ b/forum/Forum.csproj
@@ -76,6 +76,7 @@
   <ItemGroup>
     <Compile Include="ConnectionSettings.cs" />
     <Compile Include="LobbyReader.cs" />
+    <Compile Include="ReadCompleteEventArgs.cs" />
     <Compile Include="ThreadReader.cs" />
     <Compile Include="Vbulletin.cs" />
     <Compile Include="HtmlHelper.cs" />
