--- a/FennecFox/FennecFox.csproj
+++ b/FennecFox/FennecFox.csproj
@@ -80,12 +80,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DayEditor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DayEditor.Designer.cs">
+      <DependentUpon>DayEditor.cs</DependentUpon>
+    </Compile>
     <Compile Include="FennecFox.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FennecFox.Designer.cs">
       <DependentUpon>FennecFox.cs</DependentUpon>
     </Compile>
+    <Compile Include="FlashWindow.cs" />
     <Compile Include="FoxParent.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -108,6 +115,9 @@
     <Compile Include="Settings.cs">
       <SubType>Code</SubType>
     </Compile>
+    <EmbeddedResource Include="DayEditor.resx">
+      <DependentUpon>DayEditor.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FennecFox.resx">
       <DependentUpon>FennecFox.cs</DependentUpon>
     </EmbeddedResource>
