--- a/ForumTypes/ForumTypes.csproj
+++ b/ForumTypes/ForumTypes.csproj
@@ -44,6 +44,7 @@
     <Compile Include="ForumThread.cs" />
     <Compile Include="Post.cs" />
     <Compile Include="PostEdit.cs" />
+    <Compile Include="Poster.cs" />
     <Compile Include="PrivateMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
