Reworked schema. VoteCount query now fast enough.

--- a/FennecFox/app.config
+++ b/FennecFox/app.config
@@ -7,14 +7,8 @@
 </configSections>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup><userSettings>
         <POG.FennecFox.Properties.Settings>
-            <setting name="firstPost" serializeAs="String">
-                <value>1</value>
-            </setting>
             <setting name="threadUrl" serializeAs="String">
                 <value />
-            </setting>
-            <setting name="EndOfDay" serializeAs="String">
-                <value>09/29/2011 19:00:00</value>
             </setting>
             <setting name="username" serializeAs="String">
                 <value />
@@ -24,6 +18,9 @@
             </setting>
             <setting name="updateSettings" serializeAs="String">
                 <value>True</value>
+            </setting>
+            <setting name="day" serializeAs="String">
+                <value>1</value>
             </setting>
         </POG.FennecFox.Properties.Settings>
     </userSettings>
