--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\checkmywwstats\packages.config" />
+  <repository path="..\FennecFoxTests\packages.config" />
+  <repository path="..\FennecViewer\packages.config" />
   <repository path="..\forum\packages.config" />
   <repository path="..\werewolf\packages.config" />
 </repositories>
