--- a/FennecFox/Properties/Settings.settings
+++ b/FennecFox/Properties/Settings.settings
@@ -2,17 +2,8 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="POG.FennecFox.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="firstPost" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)">1</Value>
-    </Setting>
     <Setting Name="threadUrl" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
-    </Setting>
-    <Setting Name="Players" Type="System.Collections.Specialized.StringCollection" Scope="User">
-      <Value Profile="(Default)" />
-    </Setting>
-    <Setting Name="EndOfDay" Type="System.DateTime" Scope="User">
-      <Value Profile="(Default)">09/29/2011 19:00:00</Value>
     </Setting>
     <Setting Name="username" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
@@ -22,6 +13,9 @@
     </Setting>
     <Setting Name="updateSettings" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="day" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">1</Value>
     </Setting>
   </Settings>
 </SettingsFile>
