--- a/werewolf/werewolf.csproj
+++ b/werewolf/werewolf.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IPogDb.cs" />
     <Compile Include="PogSqlite.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VoteCount.cs" />
