Login dialog moved out of one game. Pick a game before showing count. Shows list from lobby. More good stuff.

--- a/werewolf/werewolf.csproj
+++ b/werewolf/werewolf.csproj
@@ -53,6 +53,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IPogDb.cs" />
+    <Compile Include="AutoComplete.cs" />
+    <Compile Include="NameCompletionEventHandler.cs" />
     <Compile Include="PogSqlite.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VoteCount.cs" />
