--- a/FennecFox/FennecFox.csproj
+++ b/FennecFox/FennecFox.csproj
@@ -80,6 +80,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AboutFennec.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AboutFennec.Designer.cs">
+      <DependentUpon>AboutFennec.cs</DependentUpon>
+    </Compile>
     <Compile Include="DayEditor.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -99,6 +105,18 @@
     <Compile Include="FoxParent.Designer.cs">
       <DependentUpon>FoxParent.cs</DependentUpon>
     </Compile>
+    <Compile Include="LoginDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LoginDialog.Designer.cs">
+      <DependentUpon>LoginDialog.cs</DependentUpon>
+    </Compile>
+    <Compile Include="OpenGame.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="OpenGame.Designer.cs">
+      <DependentUpon>OpenGame.cs</DependentUpon>
+    </Compile>
     <Compile Include="PlayerList.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -115,6 +133,9 @@
     <Compile Include="Settings.cs">
       <SubType>Code</SubType>
     </Compile>
+    <EmbeddedResource Include="AboutFennec.resx">
+      <DependentUpon>AboutFennec.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="DayEditor.resx">
       <DependentUpon>DayEditor.cs</DependentUpon>
     </EmbeddedResource>
@@ -124,6 +145,12 @@
     <EmbeddedResource Include="FoxParent.resx">
       <DependentUpon>FoxParent.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LoginDialog.resx">
+      <DependentUpon>LoginDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OpenGame.resx">
+      <DependentUpon>OpenGame.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PlayerList.resx">
       <DependentUpon>PlayerList.cs</DependentUpon>
@@ -170,6 +197,10 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ForumTypes\ForumTypes.csproj">
+      <Project>{3A512A72-44FC-458A-A6FB-36147D6C0CF6}</Project>
+      <Name>ForumTypes</Name>
+    </ProjectReference>
     <ProjectReference Include="..\forum\Forum.csproj">
       <Project>{DF0D7868-C4C0-4388-BF11-138E1FC9BF87}</Project>
       <Name>Forum</Name>
