--- a/ForumTypes/ForumTypes.csproj
+++ b/ForumTypes/ForumTypes.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CensusEntry.cs" />
     <Compile Include="ForumThread.cs" />
     <Compile Include="Post.cs" />
     <Compile Include="PostEdit.cs" />
