Use times instead of post #s for all boundaries.

--- a/werewolf/werewolf.csproj
+++ b/werewolf/werewolf.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BadSQLiteFileVersionExeption.cs" />
     <Compile Include="IPogDb.cs" />
     <Compile Include="AutoComplete.cs" />
     <Compile Include="PogSqlite.cs" />
