--- a/FennecFox/FennecFox.csproj
+++ b/FennecFox/FennecFox.csproj
@@ -105,6 +105,12 @@
     <Compile Include="FoxParent.Designer.cs">
       <DependentUpon>FoxParent.cs</DependentUpon>
     </Compile>
+    <Compile Include="KillSub.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="KillSub.Designer.cs">
+      <DependentUpon>KillSub.cs</DependentUpon>
+    </Compile>
     <Compile Include="LoginDialog.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -148,6 +154,9 @@
     <EmbeddedResource Include="FoxParent.resx">
       <DependentUpon>FoxParent.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="KillSub.resx">
+      <DependentUpon>KillSub.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LoginDialog.resx">
       <DependentUpon>LoginDialog.cs</DependentUpon>
