--- a/ThreadMonitor/ThreadMonitor.csproj
+++ b/ThreadMonitor/ThreadMonitor.csproj
@@ -47,6 +47,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SolutionInfo.cs">
+      <Link>SolutionInfo.cs</Link>
+    </Compile>
     <Compile Include="FormThreadMonitor.cs">
       <SubType>Form</SubType>
     </Compile>
