--- a/checkmywwstats/checkmywwstats.csproj
+++ b/checkmywwstats/checkmywwstats.csproj
@@ -57,6 +57,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SolutionInfo.cs">
+      <Link>SolutionInfo.cs</Link>
+    </Compile>
     <Compile Include="CheckMyStats.cs" />
     <Compile Include="LobbyReadEventArgs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
