--- a/werewolf/werewolf.csproj
+++ b/werewolf/werewolf.csproj
@@ -52,6 +52,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SolutionInfo.cs">
+      <Link>SolutionInfo.cs</Link>
+    </Compile>
     <Compile Include="BadSQLiteFileVersionExeption.cs" />
     <Compile Include="IPogDb.cs" />
     <Compile Include="AutoComplete.cs" />
@@ -59,6 +62,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VoteCount.cs" />
     <Compile Include="Voter.cs" />
+    <Compile Include="WerewolfModerator.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ForumTypes\ForumTypes.csproj">
